Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/6330920/T6330920.out
T6330920.java:11:22: compiler.err.cant.resolve.location: kindname.class, T6330920Missing, , , (compiler.misc.location: kindname.class, T6330920, null)
1 error
